cmake_minimum_required(VERSION 3.16)
project(2_week)

set(CMAKE_CXX_STANDARD 14)

add_executable(2_week
     #   factorial.cpp)
      #  is_palindrom.cpp)
       # PalindromFilter.cpp)
       # using_chrono.cpp)
        #replase_string.cpp)
       # reverse.cpp)
       # avg_temp.cpp)
       # query.cpp)
        # montly_deal.cpp)
      #  test_montly_deal.cpp)
     #   test_map.cpp)
      #  map_country_capital.cpp)
        # map_bus_stop_1.cpp
        #map_bus_stop_2.cpp
        #set_uniq_string.cpp
        #set_BuildMapValuesSet.cpp
      #  set_synonym.cpp
       # set_bus_stop_3.cpp)

