cmake_minimum_required(VERSION 3.16)
project(3_week)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(3_week
        #algos_sort_mod.cpp)
       # sort_without_register.cpp)
       # class_and_struct_sort_strings.cpp)
       # class_and_struct_name_surname_1.cpp)
        #class_and_struct_name_surname_2)
      #  test_destruct.cpp)
        constructor_name_surname_3.cpp)
