cmake_minimum_required(VERSION 3.16)
project(4_week)

set(CMAKE_CXX_STANDARD 14)

add_executable(4_week
        #"Struct_ LectureTitle.cpp")
        #"invert_functions.cpp")
        #"iostream_work_with_file.cpp")
        #"iostream_read_and_add_to_file.cpp")
        #"iostream_setprecision.cpp")
        #"iosrtream_table_read_input.cpp"
        #Reload/1_rational_interface.cpp)
        #Reload/2_rational_eq_add_sub.cpp)
        #Reload/3_rational_mult_div.cpp)
        #Reload/4_rational_io.cpp)
        #Reload/5_rational_map.cpp)
        #test_exceptions.cpp)
        #exceptions/rational_throw.cpp)
        exceptions/time_server.cpp)
